--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
   <meta property="og:locale" content="ja_JP">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="/scss/style.scss">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
