--- a/src/index.html
+++ b/src/index.html
@@ -55,52 +55,52 @@
     <div class="works">
       <ul>
         <li>
-          <a href="https://recruit2024.dinii.jp/">
+          <a target="_blank" href="https://recruit2024.dinii.jp/">
             株式会社ダイニー｜RECRUIT 2024
           </a>
         </li>
         <li>
-          <a href="https://www.goldwin.co.jp/ellesse">
+          <a target="_blank" href="https://www.goldwin.co.jp/ellesse">
             ellesse - エレッセブランドサイト
           </a>
         </li>
         <li>
-          <a href="https://knot-voice.jp/">
+          <a target="_blank" href="https://knot-voice.jp/">
             KNOT
           </a>
         </li>
         <li>
-          <a href="https://en.butterfly-studio.jp/">
+          <a target="_blank" href="https://en.butterfly-studio.jp/">
             en Live Art Performance
           </a>
         </li>
         <li>
-          <a href="https://x.com/phatosama/status/1787821967170789665">
+          <a target="_blank" href="https://x.com/phatosama/status/1787821967170789665">
             リドラメノウ
           </a>
         </li>
         <li>
-          <a href="https://nazoday2022.riddler.co.jp/">
+          <a target="_blank" href="https://nazoday2022.riddler.co.jp/">
             みんなの100日謎 by RIDDLER
           </a>
         </li>
         <li>
-          <a href="https://riddler.co.jp/">
+          <a target="_blank" href="https://riddler.co.jp/">
             RIDDLER（リドラ）
           </a>
         </li>
         <li>
-          <a href="https://nanbo-kikaku.jp/">
+          <a target="_blank" href="https://nanbo-kikaku.jp/">
             南房企画
           </a>
         </li>
         <li>
-          <a href="https://heamebungaku.jp/">
+          <a target="_blank" href="https://heamebungaku.jp/">
             ヘアメ文学 | matomage
           </a>
         </li>
         <li>
-          <a href="https://all-selecao-project.com/">
+          <a target="_blank" href="https://all-selecao-project.com/">
             人類総セレソン計画 | 東のエデン
           </a>
         </li>
