--- a/src/example/picture_math_split.html
+++ b/src/example/picture_math_split.html
@@ -43,7 +43,6 @@
       z-index: 100;
       background-color: #ccc;
       display: none;
-
     }
   </style>
 </head>
@@ -52,73 +51,10 @@
   <div>
     <div class="line-v"></div>
     <div class="line-h"></div>
-    <div class="works">
-      <ul>
-        <li>
-          <a target="_blank" href="https://recruit2024.dinii.jp/">
-            株式会社ダイニー｜RECRUIT 2024
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://www.goldwin.co.jp/ellesse">
-            ellesse - エレッセブランドサイト
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://knot-voice.jp/">
-            KNOT
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://en.butterfly-studio.jp/">
-            en Live Art Performance
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://x.com/phatosama/status/1787821967170789665">
-            リドラメノウ
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://nazoday2022.riddler.co.jp/">
-            みんなの100日謎 by RIDDLER
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://riddler.co.jp/">
-            RIDDLER（リドラ）
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://nanbo-kikaku.jp/">
-            南房企画
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://heamebungaku.jp/">
-            ヘアメ文学 | matomage
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://all-selecao-project.com/">
-            人類総セレソン計画 | 東のエデン
-          </a>
-        </li>
-        <li>
-          <a class="contact-btn" href="mailto:toi.nagasawa@item-item.com">
-            問い合わせ
-          </a>
-        </li>
-      </ul>
-    </div>
     <canvas id="three"></canvas>
     <%- include('components/main.ejs'); %>
   </div>
-  <script type="module" src="/js/index5.ts"></script>
-
-  <script>
-
-  </script>
+  <script type="module" src="/js/picture_math_split/index.ts"></script>
 </body>
 
 </html>
