--- a/src/example/water.html
+++ b/src/example/water.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>ITEM</title>
-  <meta name="description" content="今後考えます。">
+  <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <meta name="format-detection" content="telephone=no">
   <meta property="og:type" content="article">
   <meta property="og:title" content="ITEM">
-  <meta property="og:description" content="今後考えます。">
+  <meta property="og:description" content="">
   <meta property="og:url" content="https://item-item.com">
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:image" content="https://item-item.com/img/OGP.png">
