--- a/src/example/water.html
+++ b/src/example/water.html
@@ -85,7 +85,21 @@
 
     <div class="fv"></div>
     <div class="copy">
-      <img src="/img/copy_content.svg" alt="">
+      <div class="copy__inner">
+        <div class="copy__head">
+          <img src="/img/concept_1.svg" alt="">
+        </div>
+        <div class="copy__content">
+          <div class="copy__block">
+            <img src="/img/concept_2.svg" alt="">
+          </div>
+          <div class="copy__block">
+            <img src="/img/concept_3.svg" alt="">
+          </div>
+          
+
+        </div>
+      </div>
     </div>
   </main>
 
