--- a/src/example/water.html
+++ b/src/example/water.html
@@ -86,14 +86,14 @@
     <div class="fv"></div>
     <div class="copy">
       <div class="copy__inner">
-        <div class="copy__head">
+        <div class="copy__head js-watch">
           <img src="/img/concept_1.svg" alt="">
         </div>
         <div class="copy__content">
-          <div class="copy__block">
+          <div class="copy__block js-watch">
             <img src="/img/concept_2.svg" alt="">
           </div>
-          <div class="copy__block">
+          <div class="copy__block js-watch">
             <img src="/img/concept_3.svg" alt="">
           </div>
           
