--- a/src/example/half-particle.html
+++ b/src/example/half-particle.html
@@ -45,6 +45,19 @@
 
 <body>
   <div>
+    <div class="menu-list">
+      <ul>
+        <li class="menu-item" data-image="0">
+          ABOUT
+        </li>
+        <li class="menu-item" data-image="0">
+          WORKS
+        </li>
+        <li class="menu-item" data-image="0">
+          TEAM
+        </li>
+      </ul>
+    </div>
     <div class="h-100svh-skel"></div>
     <div class="line-v"></div>
     <div class="line-h"></div>
